<resources>
    <string name="app_name">WhatsApp+</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="agree_and_continue">AGREE AND CONTINUE</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="help">Help</string>
    <string name="whatsapp_will_send_an_sms_message_to_verify_your_phone">WhatsApp will send an SMS message to verify your phone</string>
    <string name="number">number.</string>
    <string name="what_s_my_number">What\'s my number?</string>
    <string name="title_activity_choose_acountry">ChooseACountry</string>
    <string name="plus"> +</string>
    <string name="_91">91</string>
    <string name="carrier_sms_charges_may_apply">Carrier SMS charges may apply</string>
    <string name="next">NEXT</string>
    <string name="read">We didn\'t detect a valid phone number.\nPlease go back to the previous screen and enter your phone \nnumber in full international format:\n\t\t1.Choose your country from country list. This will\n\t\tautomatically fill the country code.\n\n\t\t2.Enter your phone number. Omit any leading 0s before \n\t\t the phone number.\nFor example, a correct United States phone number will\nappear as +1 (408) 555-1234 after being entered.\nFor more information, please read our\t\t\t.</string>
    <string name="problem_detected">Problem detected</string>
    <string name="faq">FAQ</string>
    <string name="this_doesn_t_answered_my_question">This doesn\'t answered my question</string>
    <string name="india">India</string>
    <string name="_91_">+91</string>
    <string name="we_will_be_verifying_the_phone_number">We will be verifying the phone number:</string>
    <string name="phone_number">Phone Number</string>
    <string name="is_this_ok_or_would_you_like_to_edit_the_number">Is this OK, or would you like to edit the number?</string>
    <string name="verify_91_99999_99999">Verify +91 99999 99999</string>
    <string name="waiting_to_automatically_detect_a_sms_sent_to">Waiting to automatically detect a SMS sent to</string>
    <string name="_91_99999_99999">+91 99999 99999.</string>
    <string name="wrong_number">Wrong number?</string>
    <string name="_">- - - \t - - -</string>
    <string name="enter_6_digit_code">Enter 6-digit code</string>
    <string name="resend_sms">\tResend SMS</string>
    <string name="_1_02">1:03</string>
    <string name="call_me">\tCall me</string>
    <string name="profile_info">Profile Info</string>
    <string name="please_provide_your_name_and_an_optional_profile_photo">Please provide your name and an optional profile photo</string>
    <string name="type_your_name_here">Type your name here</string>

</resources>
