<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/verify_phoneNumber"
                android:text="@string/verify_91_99999_99999"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:gravity="center"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/waiting_to_automatically_detect_a_sms_sent_to"
        android:layout_marginTop="70dp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textAllCaps="false"
        />
    <TextView
        android:id="@+id/verify_phoneNumber2"
        android:text="@string/_91_99999_99999"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginStart="90dp"
        android:layout_marginTop="90dp"/>
    <TextView
        android:id="@+id/wrongNumber"
        android:text="@string/wrong_number"
        android:textAllCaps="false"
        android:textColor="#34B7F1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="185dp"
        />
    <EditText
        android:id="@+id/verification_code"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:hint="@string/_"
        android:textAlignment="center"
        android:layout_marginTop="125dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />
    <TextView
        android:text="@string/enter_6_digit_code"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginTop="170dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginStart="15dp"
        android:layout_marginTop="210dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="10"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_weight="1"
            android:src="@drawable/ic_message_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="8"
            android:text="@string/resend_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/stopWatch1"
            android:layout_weight="1"
            android:text="@string/_1_02"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="15dp"
        android:layout_marginTop="265dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="10"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_weight="1"
            android:src="@drawable/ic_phone_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="8"
            android:text="@string/call_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/stopWatch2"
            android:layout_weight="1"
            android:text="@string/_1_02"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="248dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#CBCBCB"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
       />

</androidx.coordinatorlayout.widget.CoordinatorLayout>