<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/problem_detected"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="266dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:text="@string/read"
            android:textStyle="normal"
            android:textSize="14sp"
             />

        <TextView
            android:id="@+id/FAQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="212dp"
            android:layout_marginTop="181dp"
            android:text="@string/faq"
            android:textColor="#34B7F1"
            android:textSize="14sp" />
    </FrameLayout>
    <TextView
        android:id="@+id/MoreHelp"
        android:layout_marginTop="350dp"
        android:background="#1EBEA5"
        android:text="@string/this_doesn_t_answered_my_question"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="62dp"/>

</LinearLayout>