<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@android:color/black"
        android:text="@string/we_will_be_verifying_the_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/phone_Number"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:text="@string/phone_number"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:textSize="17sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:textColor="@android:color/black"
        android:text="@string/is_this_ok_or_would_you_like_to_edit_the_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>