<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:text="@string/enter_your_phone_number"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
</LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whatsapp_will_send_an_sms_message_to_verify_your_phone"
        android:layout_marginTop="70dp"
        android:textColor="@android:color/black"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="10dp"
        android:textAllCaps="false"
        />
    <TextView
        android:text="@string/number"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginStart="120dp"
        android:layout_marginTop="90dp"/>
    <TextView
        android:id="@+id/whatsMyNumber"
        android:text="@string/what_s_my_number"
        android:textAllCaps="false"
        android:textColor="#34B7F1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="165dp"
        />
    <Spinner
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:id="@+id/spinner"
        android:layout_marginTop="130dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:textAlignment="center"
        android:outlineProvider="bounds"
        >
    </Spinner>
    <LinearLayout
        android:layout_marginTop="160dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_height="1dp"/>
    <TextView
        android:text="@string/plus"
        android:textStyle="bold"
        android:layout_marginTop="180dp"
        android:layout_marginStart="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/countryCodeNumber"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:text="@string/_91"
        android:layout_marginTop="165dp"
        android:layout_marginStart="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />
    <LinearLayout
        android:layout_marginTop="201dp"
        android:background="@color/colorPrimary"
        android:layout_width="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_height="2dp"/>
    <EditText
        android:id="@+id/phoneNumber"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:hint="@string/enter_your_phone_number"
        android:layout_marginTop="165dp"
        android:layout_marginStart="130dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />
    <LinearLayout
        android:layout_marginTop="201dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="60dp"
        android:layout_height="2dp"/>
    <TextView
        android:text="@string/carrier_sms_charges_may_apply"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="220dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/next_button"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:background="#00B900"
        android:textAlignment="center"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>