<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img1"
    android:gravity="bottom"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/privacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textStyle="bold"
        android:text="@string/privacy_policy"
        android:textAllCaps="false"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="175dp"
        android:textSize="14sp"
        android:background="@android:color/white"
        android:textColor="#34B7F1">

    </TextView>
    <TextView
        android:id="@+id/termsOfService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="13dp"
        android:text="@string/terms_of_service"
        android:textStyle="bold"
        android:textColor="#34B7F1"
        android:background="@android:color/white"
        android:textAlignment="center"
        android:layout_marginRight="120dp"
        android:layout_marginLeft="120dp"
        >

    </TextView>
    <Button
        android:id="@+id/agreeAndContinue"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="120dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:text="@string/agree_and_continue"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="#00B900">

    </Button>

</LinearLayout>