<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/profile_info"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        />
    <TextView
        android:layout_marginTop="25dp"
        android:text="@string/please_provide_your_name_and_an_optional_profile_photo"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>
    <FrameLayout
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:layout_height="120dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewOfProfileActivity"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="#E0E0E0"
            />
        <ImageView
            android:visibility="visible"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_add_a_photo_black_24dp"
            tools:ignore="ContentDescription" />
    </FrameLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_weight="8"
        android:layout_width="wrap_content"
        android:shadowColor="@color/colorPrimaryDark"
        android:hint="@string/type_your_name_here"
        android:layout_marginStart="30dp"
        android:layout_height="wrap_content"
        android:inputType="text" />
        <ImageView
            android:src="@drawable/ic_tag_faces_black_24dp"
            android:layout_weight="2"
            android:layout_width="30dp"
            android:layout_gravity="center"
            android:layout_height="30dp"/>
    </LinearLayout>
</LinearLayout>